istio/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.global-static-ip-name: my-ip
spec:
  backend:
    serviceName: istio-ingressgateway
    servicePort: 80
  tls:
  - secretName: example-com-tls
