istio/managed.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.global-static-ip-name: my-ip
    networking.gke.io/managed-certificates: my-managed-cert
spec:
  backend:
    serviceName: istio-ingressgateway
    servicePort: 80
