istio/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-service
spec:
  hosts:
  - example.com
  gateways:
  - istio-gateway
  http:
  # - match:
  #   - uri:
  #       prefix: /kiali
  #   route:
  #   - destination:
  #       host: kiali.istio-system.svc.cluster.local
  #       port:
  #         number: 20001
  - route:
    - destination:
        host: backend-service
        port:
          number: 80
